Use one global synchronised editor layout across all projects and all editors

Completely change the behaviour of the editor tab state management.
Editor tabs have widgets associated with them (dock widgets) which
can be resized (the editor tab's state). Here the resizing is watched
for changes, changes are "debounced" so every pixel change doesn't
write to disk, then after 0.5s without resizing occurring, the state
is saved to disk meaning reopening Lokalize opens editors with the
same layout. The state is also applied to all open editor tabs,
meaning they all share the same layout at all times.

The glossary widget is moved to `m_glossaryView` in line with the
other widgets belonging to the editor tab.

BUG: 503042
BUG: 503329